chore: remove obsolete parcel debug section and fix zoom hint

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -58,14 +58,10 @@
             </ul>
         </div>
 
-        <div id="parcel-debug" class="info-section debug-info"
-            style="font-size: 0.8em; opacity: 0.7; margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
-            <p>Parcelles: <span id="parcel-status">Hors zoom</span></p>
-            <p>Dernière tuile: <span id="last-tile-size">0 KB</span></p>
-        </div>
+
 
         <div class="zoom-hint">
-            <p>🔍 Zoomez pour voir les parcelles (niv 13+)</p>
+            <p>Zoomez pour voir les parcelles (niv 14+)</p>
             <p>Niveau: <span id="zoom-level">5</span></p>
         </div>
     </div>
